--- a/src/style.css
+++ b/src/style.css
@@ -806,9 +806,24 @@ body {
     /*******************/
     /* ** Timeline ** */
     /*******************/
-    /* .div-timeline .img-logo-timeline-desktop {
+    .div-timeline {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .div-navegation {
+        display: flex; 
+        margin-top: 2%;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .div-timeline .img-logo-timeline-desktop {
         display: none;
     }
+
+
     .img-logo-VB {
         display: initial;
         max-width: 25%;
@@ -816,7 +831,7 @@ body {
     }
 
     .img-user {
-        width: 20%;
+        width: 65%;
         border-radius: 50%;
         margin-bottom: 3%;
         border: 2px solid #9A4C4C;
@@ -825,7 +840,117 @@ body {
     .img-logout {
         max-width: 10%;
         cursor: pointer;
-    } */
+    }
+
+    .div-Profile-User {
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        margin-right: 50px;
+
+    }
+
+    .user-Name {
+        font-size: 15px;
+        font-family: 'Raleway', sans-serif;
+        color: #9A4C4C;
+    }
+
+    .hr-timeline {
+        width: 100%;
+    }
+
+    .hr-timeline-post{
+        width: 0%;
+        margin: 0;
+    }
+
+    .div-post {
+        width: 70%;
+        border: 2px solid #CCA5A5;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+    }
+
+    .input-post {
+        width: 80%;
+        height: 100px;
+        margin-bottom: 20px;
+        border: none;
+        border-radius: 10px;
+        font-family: 'Raleway', sans-serif;
+        font-size: 20px;
+        padding: 5px 10px;
+    }
+
+    .input-post::placeholder {
+        font-style: normal;
+        font-family: 'Raleway', sans-serif;
+        font-weight: 400;
+        font-size: 20px;
+        padding: 30px 10px;
+        line-height: 19px;
+        color: rgba(0, 0, 0, 0.54);
+    }
+
+    .div-post-actions {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        width: 100%;
+        margin-bottom: 15px;
+        border-top: 0.2px solid #e0c9c9;
+        padding-top: 15px;
+    }
+
+    .button-post {
+        width: 90px;
+        height: 39px;
+        background: #65823b;
+        border-radius: 39px;
+        color: #FFFFFF;
+        border: none;
+        font-weight: 500;
+        font-size: 15px;
+        cursor: pointer;
+    }
+
+    .div-user-post{
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 10px;
+    width: 100%;
+    border: 1px solid #194F37;
+    height: 153px;
+    border-radius: 16px;
+    }
+
+    .div-user-image-and-username{
+        display: flex;
+        flex-direction: row;
+        margin-left: 10px;
+    }
+    .img-user-post{
+        margin: 10px;
+        width: 20%;
+        border-radius: 50%;
+        margin-bottom: 3%;
+        border: 2px solid #9A4C4C;  
+    }
+    .user-Name-post{
+        font-size: 20px;
+        font-family: 'Raleway', sans-serif;
+        color: #9A4C4C;   
+    }
+    .message-posts{
+        font-family: 'Raleway', sans-serif;
+        font-size: 16px;
+        padding-left: 10px;
+        margin-top: 10px; 
+    }
 }
 
 /******************* Desktop **************** */
@@ -1219,12 +1344,13 @@ body {
         justify-content: space-around;
     }
 
-    .img-logo-VB {
+    /* .img-logo-VB {
         display: none;
-    }
+    } */
 
     .img-logo-timeline-desktop {
         max-width: 30%;
+        display: initial;
     }
 
     .img-user {
